--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,9 @@
     "autoload": {
         "psr-4": {
             "MVC\\": "./",
-            "Controllers\\": "controllers/",
-            "Model\\": "models/"
+            "Controllers\\": "./controllers",
+            "Model\\": "./models",
+            "Classes\\": "./classes"
         }
     },
     "authors": [
@@ -15,5 +16,7 @@
             "email": "117423831+Edwin1406@users.noreply.github.com"
         }
     ],
-    "require": {}
+    "require": {
+        "phpmailer/phpmailer": "^6.9"
+    }
 }
