--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
         "psr-4": {
             "MVC\\": "./",
             "Controllers\\": "controllers/",
-            "Model\\": "models/",
-            "Classes\\": "classes/"
+            "Model\\": "models/"
+           
         }
     },
     "authors": [
