--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,9 @@
     "autoload": {
         "psr-4": {
             "MVC\\": "./",
-            "Controllers\\": "controllers/",
-            "Model\\": "models/",
-            "Classes\\": "classes/"
+            "Controllers\\": "./controllers",
+            "Model\\": "./models",
+            "Classes\\": "./classes"
            
         }
     },
