--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
             "MVC\\": "./",
             "Controllers\\": "./controllers",
             "Model\\": "./models",
-            "Classes\\": "./classes"
+            "Classes\\": "path/to/classes"
+        
            
         }
     },
