--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
             "MVC\\": "./",
             "Controllers\\": "./controllers",
             "Model\\": "./models",
-            "Classes\\": "path/to/classes/"
+            "Classes\\": "classes/"
         
            
         }
