--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,10 @@
     "type": "project",
     "autoload": {
         "psr-4": {
+            "Classes\\": "./classes",
             "MVC\\": "./",
             "Controllers\\": "./controllers",
-            "Model\\": "./models",
-            "Classes\\": "./classes"
+            "Model\\": "./models"
         
            
         }
