--- a/includes/.env
+++ b/includes/.env
@@ -6,8 +6,8 @@ DB_NAME =u904102484_odonto
 
 EMAIL_HOST =smtp.hostinger.com
 EMAIL_PORT =465
-EMAIL_USER =clinica@dental-alvarez.com
-EMAIL_PASS =Dental2025.
+EMAIL_USER =pruebas@odonto.megawebsistem.com
+EMAIL_PASS =Odonto2025.
 
 
 
