--- a/includes/.env
+++ b/includes/.env
@@ -1,13 +1,21 @@
-BD_HOST =localhost
-BD_USER =u904102484_odonto
-BD_PASS =Odonto2025.
-DB_NAME =u904102484_odonto
 
+# Configuración de la Base de Datos para SAS
+BD_HOST_SAS=localhost
+BD_USER_SAS=u904102484_sas
+BD_PASS_SAS=Sas2025.
+BD_NAME_SAS=u904102484_sas
 
-EMAIL_HOST =smtp.hostinger.com
-EMAIL_PORT =465
-EMAIL_USER =pruebas@odonto.megawebsistem.com
-EMAIL_PASS =Odonto2025.
+# Configuración de la Base de Datos para ODONTO
+BD_HOST_ODONTO=localhost
+BD_USER_ODONTO=u904102484_odonto
+BD_PASS_ODONTO=Odonto2025.
+BD_NAME_ODONTO=u904102484_odonto
+
+# Configuración de correo
+EMAIL_HOST=smtp.hostinger.com
+EMAIL_PORT=465
+EMAIL_USER=pruebas@odonto.megawebsistem.com
+EMAIL_PASS=Odonto2025.
 
 
 
